# learning-web

./: .gitignore  README.md
learning_backend/django_practice/: .dockerignore  .gitignore  NOTES.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
learning_backend/django_practice/container-config/: Dockerfile_django  Dockerfile_nginx  compose.dev.yaml  compose.preprod.yaml  compose.prod.yaml  compose.yaml  docker-compose.sh  docker_compose.sh  fly.sh  fly_django.toml  fly_nginx.toml
learning_backend/django_practice/container-config/git-safe/: .dev.safe.env  .preprod.safe.env  .prod.safe.env  .safe.env
learning_backend/django_practice/nginx/: nginx.conf  nginx.conf.template  static.conf  statics.conf  user-media.conf  vars.conf.template
learning_backend/django_practice/nginx/statics/: staticfiles.json
learning_backend/django_practice/practice-app/: MANIFEST.in  pyproject.toml
learning_backend/django_practice/practice-app/practice/: admin.py  forms.py  models.py  urls.py  views.py
learning_backend/django_practice/practice-app/practice.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
learning_backend/django_practice/practice-app/practice/migrations/: 0001_initial.py  0002_parentnonabstractmodel_generic_field.py  0003_concreteofabstractmodel_field3.py  0004_alter_concreteofabstractmodel_field3.py  0005_alter_concreteofabstractmodel_field2.py  0006_alter_concreteofabstractmodel_field.py  0007_concreteofabstractmodel_fieldthatwehideinadmin.py  0008_rename_fieldthatwehideinadmin_concreteofabstractmodel_field_that_we_hide_in_admin.py  0009_concreteofabstractmodel_self_friends.py  0010_concreteofabstractmodel_slug.py  0011_concreteofabstractmodel_self_enemies.py  0013_alter_simplemodel_options.py  (+5 more)
learning_backend/python_practice/: .gitignore  classes.py  comprehensions.py  concurrency_and_threading.py  data-structures.py  dates.py  equality-and-truthiness.py  errors.py  files.py  function-decorators.py  functions.py  import.py  inheritance.py  intro.py  logs.py  loops-and-conditionals.py  math-funcs.py  memory.py  metaclasses.py  os.py  pyproject.toml  requests.py  scope.py  sys-and-args.py  test_sample.py  unpacking-aka-destructuring.py
learning_backend/python_practice/for_import/: __init__.py  explicit_only_module.py  module.py
learning_backend/python_practice/for_import/subpackage/: __init__.py
learning_backend/python_practice/relative_imports/: import.py
learning_backend/python_practice/sys_import_module/: for_sys_import.py
(+275 files in other folders)
