[tool.poetry]
name = "django-practice"
version = "0.1.0"
description = ""
authors = ["Conrad Shock <shockconrad@gmail.com>"]

# when building poetry project for requirements.txt, must use the poetry-plugin-export (install via
# `pipx inject poetry poetry-plugin-export`) and run the following:
#
#  > poetry export --without-hashes | awk '{ print $1 }' FS=';' > requirements.txt && sed -i ''
#    "s%.* @ file://$PWD%.%g" requirements.txt
#
# - NOTE: 'awk' removes python version number by splitting lines on ';' and taking the first column
# - NOTE: 'sed' call replaces local packages syntax 'package_name @ file://absolute_path' with
#   'relative_path'
# - NOTE: option '--without-hashes' to exclude hash values
#
# Dependencies in this format of requirements.txt can be added by poetry via `poetry add $(cat requirements.txt)`
[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djlint = "^1.34.1"
docutils = "^0.20.1"
django-debug-toolbar = "^4.3.0"
coverage = "^7.4.4"
build = "^1.2.1"
# include the 'editable' flag to link to a local package's source code instead of a built
# distributable
practice = {path = "./practice-app/dist/practice-0.1.0-py3-none-any.whl"}
redis = "^5.0.4"
hiredis = "^2.3.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}
gunicorn = "^22.0.0"
dj-database-url = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
