[tool.poetry]
name = "python-practice"
version = "0.1.0"
description = ""
authors = ["Conrad Shock <shockconrad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore-init-module-imports = true